[project]
name = "vocos"
version = "0.1.0"
description = "Fourier-based neural vocoder for high-quality audio synthesis"
readme = "README.md"
authors = [
    { name = "Hubert Siuzdak", email = "huberts@charactr.com" },
]
urls = { Homepage = "https://github.com/charactr-platform/vocos" }
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.2",
    "huggingface-hub>=1.24.0",
    "numpy>=2.5.1",
    "pyyaml>=6.0.3",
    "scipy>=1.18.0",
    "torch>=2.13.0",
    "torchaudio>=2.11.0",
    "torchcodec>=0.15.0",
]

[project.optional-dependencies]
train = [
    "encodec>=0.1.1",
    "jsonargparse[signatures]>=4.49.0",
    "matplotlib>=3.11.1",
    "pesq>=0.0.4",
    "pytorch-lightning>=2.6.5",
    "tensorboard>=2.21.0",
    "transformers>=5.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vocos"]
